--- a/package.json
+++ b/package.json
@@ -29,7 +29,10 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
+    "chalk": "3.0.0-beta.2",
     "fastify": "^4.14.1",
+    "log4js": "^6.9.1",
+    "moment": "^2.29.4",
     "mysql2": "^2.3.3",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
@@ -38,6 +41,7 @@
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
+    "stacktrace-js": "^2.0.2",
     "typeorm": "^0.3.11",
     "webpack": "5.0.0-rc.6"
   },
