--- a/package.json
+++ b/package.json
@@ -22,18 +22,22 @@
   },
   "dependencies": {
     "@nestjs/common": "^9.0.0",
-    "@nestjs/config": "^2.2.0",
+    "@nestjs/config": "^2.3.1",
     "@nestjs/core": "^9.0.0",
     "@nestjs/jwt": "^10.0.1",
     "@nestjs/microservices": "^9.3.9",
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
+    "@type": "link:node-rsa/@type",
     "chalk": "3.0.0-beta.2",
     "fastify": "^4.14.1",
+    "js-md5": "^0.7.3",
+    "jsencrypt": "^3.3.2",
     "log4js": "^6.9.1",
     "moment": "^2.29.4",
     "mysql2": "^2.3.3",
+    "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.1",
     "passport-local": "^1.0.0",
@@ -43,6 +47,7 @@
     "rxjs": "^7.2.0",
     "stacktrace-js": "^2.0.2",
     "typeorm": "^0.3.11",
+    "uuid-random": "^1.3.2",
     "webpack": "5.0.0-rc.6"
   },
   "devDependencies": {
