--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "@nestjs/passport": "^9.0.0",
     "@nestjs/platform-express": "^9.0.0",
     "@nestjs/platform-fastify": "^9.2.1",
+    "@nestjs/typeorm": "^9.0.1",
     "@type": "link:node-rsa/@type",
     "chalk": "3.0.0-beta.2",
     "fastify": "^4.14.1",
@@ -36,6 +37,8 @@
     "jsencrypt": "^3.3.2",
     "log4js": "^6.9.1",
     "moment": "^2.29.4",
+    "mongo": "^0.1.0",
+    "mongoose": "^7.2.2",
     "mysql2": "^2.3.3",
     "node-rsa": "^1.1.1",
     "passport": "^0.6.0",
@@ -46,7 +49,7 @@
     "rimraf": "^3.0.2",
     "rxjs": "^7.2.0",
     "stacktrace-js": "^2.0.2",
-    "typeorm": "^0.3.11",
+    "typeorm": "^0.3.12",
     "uuid-random": "^1.3.2",
     "webpack": "5.0.0-rc.6"
   },
